Fix logo size on small screens (closes: T-955)

--- a/components/layout/header/header.module.scss
+++ b/components/layout/header/header.module.scss
@@ -4,7 +4,7 @@
   position: relative;
   z-index: 3;
 
-  padding: 2rem 0;
+  padding: var(--spacing-s) 0;
 
   @include media-breakpoint-up(lg) {
     padding-top: 4rem;
@@ -19,7 +19,7 @@
   }
 
   svg {
-    height: 64px;
+    height: 32px;
 
     @include media-breakpoint-up(lg) {
       height: 64px;
